--- a/src/base/common.css
+++ b/src/base/common.css
@@ -54,7 +54,7 @@ button {
 
 /* typography */
 p {
-  @apply text-base mb-8 rtl:text-lg;
+  @apply text-base mb-8;
   &.text-sm {
     @apply mb-7
   }
@@ -64,9 +64,9 @@ p {
 }
 
 a {
-  @apply text-primary-600 hover:text-primary-500 relative inline-block underline underline-offset-1 transition-all duration-200 ease-in-out hover:underline-offset-2;
+  @apply rounded text-primary-600 hover:text-primary-500 relative inline-block underline underline-offset-1 transition-all duration-200 ease-in-out hover:underline-offset-2;
+  @apply focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-primary-300;
 }
-
 
 [type='text'],
 [type='email'],
