--- a/src/base/common.css
+++ b/src/base/common.css
@@ -49,7 +49,7 @@ h6 {
 }
 
 button {
-  @apply cursor-pointer no-underline inline-flex flex-shrink-0 select-none flex-wrap items-center justify-center text-center transition duration-200 ease-in-out;
+  @apply cursor-pointer no-underline inline-flex flex-shrink-0 select-none flex-wrap items-center justify-center text-center;
 }
 
 /* typography */
@@ -64,7 +64,7 @@ p {
 }
 
 a {
-  @apply rounded text-primary-600 hover:text-primary-500 relative inline-block underline underline-offset-1 transition-all duration-200 ease-in-out hover:underline-offset-2;
+  @apply rounded text-primary-600 hover:text-primary-500 relative inline-block underline underline-offset-1 transition-all duration-200 ease-in-out hover:decoration-2;
   @apply focus:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-primary-300;
 }
 
