--- a/src/components/breadcrumb.css
+++ b/src/components/breadcrumb.css
@@ -14,7 +14,7 @@ nav.aegov-breadcrumb{
 				@apply w-3 h-3 inline-block;
 			}
 			& [aria-current="page"] {
-				@apply text-aeblack-800 font-semibold relative inline-block no-underline;
+				@apply truncate max-w-[160px] text-aeblack-800 font-semibold relative inline-block no-underline;
 				@apply after:absolute after:-bottom-1 after:left-0 after:w-1/3 after:h-[3px] after:bg-primary-500 after:rounded;
 			}
 		}
@@ -27,7 +27,7 @@ nav.aegov-breadcrumb{
 				}
 			}
 			&[aria-current="page"] {
-				@apply text-aeblack-800 font-semibold relative inline-block no-underline;
+				@apply truncate max-w-[160px] text-aeblack-800 font-semibold relative inline-block no-underline;
 				@apply after:absolute after:-bottom-1 after:left-0 after:w-1/3 after:h-[3px] after:bg-primary-500 after:rounded;
 			}
 		}
