--- a/src/components/formcontrols.css
+++ b/src/components/formcontrols.css
@@ -24,3 +24,41 @@ input[type="radio"] {
 input[type="checkbox"] {
 	@apply rounded;
 }
+/* Creating the checkbox group component */
+.aegov-check-item {
+	@apply flex justify-start items-center space-x-4 rtl:space-x-reverse;
+}
+.aegov-check-group {
+	@apply relative flex items-start text-aeblack-400 space-x-4 rtl:space-x-reverse;
+	& input {
+		@apply mt-1;
+	}
+	& label{
+        @apply font-semibold text-aeblack-800 inline-block;
+    }
+    & p {
+    	@apply mb-0;
+    }
+
+    &.group-list {
+    	@apply flex items-center justify-between py-5;
+    	& label {
+    		@apply select-none pe-4;
+    	}
+    }
+}
+.aegov-check-item,
+.aegov-check-group {
+	&.check-lg {
+		@apply text-lg;
+		& input[type="checkbox"], input[type="radio"] {
+			@apply h-6 w-6;
+		}
+	}
+	&.check-sm {
+		@apply text-sm;
+		& input[type="checkbox"], input[type="radio"] {
+			@apply h-4 w-4 before:h-10 before:w-10;
+		}
+	}
+}
