--- a/src/components/form-checks.css
+++ b/src/components/form-checks.css
@@ -1,19 +1,3 @@
-[type='text'],
-[type='email'],
-[type='url'],
-[type='password'],
-[type='number'],
-[type='date'],
-[type='datetime-local'],
-[type='month'],
-[type='search'],
-[type='tel'],
-[type='time'],
-[type='week'],
-[multiple],
-select, textarea {
-	@apply appearance-none bg-whitely-50;
-}
 input[type="checkbox"],
 input[type="radio"] {
 	@apply appearance-none h-5 w-5 m-0 accent-primary-400 text-primary-400 border border-primary-400 relative flex-shrink-0;
@@ -27,6 +11,11 @@ input[type="checkbox"] {
 /* Creating the checkbox group component */
 .aegov-check-item {
 	@apply flex justify-start items-center space-x-4 rtl:space-x-reverse;
+	&:has(input:disabled) {
+    	& label {
+    		@apply text-aeblack-300;
+    	}
+    }
 }
 .aegov-check-group {
 	@apply relative flex items-start text-aeblack-400 space-x-4 rtl:space-x-reverse;
@@ -46,13 +35,28 @@ input[type="checkbox"] {
     		@apply select-none pe-4;
     	}
     }
+    &:has(input:disabled) {
+    	@apply text-aeblack-200;
+    	& label {
+    		@apply text-aeblack-300;
+    	}
+    }
 }
+
+/* Size definations */
+
 .aegov-check-item,
 .aegov-check-group {
 	&.check-lg {
 		@apply text-lg;
 		& input[type="checkbox"], input[type="radio"] {
 			@apply h-6 w-6;
+		}
+	}
+	&.check-base {
+		@apply text-base;
+		& input[type="checkbox"], input[type="radio"] {
+			@apply h-5 w-5;
 		}
 	}
 	&.check-sm {
