--- a/src/components/alert.css
+++ b/src/components/alert.css
@@ -1,5 +1,5 @@
 .aegov-alert {
-	@apply flex items-start gap-4 px-6 py-4;
+	@apply flex items-start gap-4 px-6 py-4 rounded relative;
 
 	& > .alert-icon {
 		& > svg {
@@ -24,6 +24,32 @@
 				@apply no-underline font-bold hover:underline hover:underline-offset-2 hover:decoration-2;
 			}
 		}
+		&.alert-with-link {
+			@apply flex-1 md:flex md:justify-between;
+			p {
+				@apply mb-0;
+			}
+			.alert-link {
+				@apply mt-3 text-sm md:ml-6 md:mt-0 mb-0;
+				& a {
+					@apply whitespace-nowrap font-medium;
+				}
+			}
+		}
+	}
+
+	& > .alert-dismiss {
+		@apply absolute right-2 top-2;
+		& > button {
+			@apply p-2;
+			& > svg {
+				@apply h-5 w-5;
+			}
+		}
+	}
+
+	&:has(.alert-dismiss) {
+		@apply ps-6 pe-10;
 	}
 
 
@@ -42,6 +68,9 @@
 					@apply text-aered-700 hover:text-aered-600;
 				}
 			}
+			& a {
+				@apply text-aered-700 underline;
+			}
 		}
 	}
 	/* Define Success */
@@ -58,6 +87,9 @@
 				& a {
 					@apply text-aegreen-700 hover:text-aegreen-600;
 				}
+			}
+			& a {
+				@apply text-aegreen-700 underline;
 			}
 		}
 	}
@@ -76,6 +108,9 @@
 					@apply text-techblue-700 hover:text-techblue-600;
 				}
 			}
+			& a {
+				@apply text-techblue-700 underline;
+			}
 		}
 	}
 	/* Define Warning */
@@ -93,6 +128,9 @@
 					@apply text-camel-700 hover:text-camel-600;
 				}
 			}
+			& a {
+				@apply text-camel-700 underline;
+			}
 		}
 	}
   
@@ -109,6 +147,20 @@
 			@apply text-lg;
 			& p {
 				@apply text-lg;
+			}
+		}
+	}
+	&.alert-base {
+		& > .alert-icon {
+			& > svg,
+			& > img {
+				@apply h-6 w-6;
+			}
+		}
+		& > .alert-content {
+			@apply text-base;
+			& p {
+				@apply text-base;
 			}
 		}
 	}
