--- a/src/components/toggle.css
+++ b/src/components/toggle.css
@@ -14,7 +14,7 @@
 }
 
 .toggle-icon {
-	@apply before:bg-no-repeat before:bg-center before:h-5 before:w-5;
+	@apply before:bg-no-repeat before:bg-center before:h-5 before:w-5 mb-0;
 	&:before {
       	background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' fill='%23BBBCBD' viewBox='0 0 256 256'%3E%3Cpath d='M205.66,194.34a8,8,0,0,1-11.32,11.32L128,139.31,61.66,205.66a8,8,0,0,1-11.32-11.32L116.69,128,50.34,61.66A8,8,0,0,1,61.66,50.34L128,116.69l66.34-66.35a8,8,0,0,1,11.32,11.32L139.31,128Z'%3E%3C/path%3E%3C/svg%3E");
       	@apply bg-[length:10px_10px];
