--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -8,7 +8,7 @@ header{
     & > *{
         @apply relative inline-flex;
         &:not(:last-child){
-            @apply  custom-divide-common me-4 pe-4 before:h-3.5 before:w-px before:bg-aeblack-100;
+            @apply custom-divide-common me-4 pe-4 before:h-3.5 before:w-px before:bg-aeblack-100;
         }
     }
 }
@@ -21,8 +21,10 @@ header{
         @apply me-4 pe-4 md:me-5 md:pe-5 lg:me-6 lg:pe-6 xl:me-10 xl:pe-10 custom-divide-common before:h-6 sm:before:h-8 md:before:h-10 before:w-0.5 before:bg-primary-100;
     }
 }
-.logo{
-    @apply inline-block w-40 sm:w-48 md:w-56 xl:w-auto xl:max-w-[300px] ;
+.logo {
+   & img{
+        @apply block w-auto h-[3.125rem] sm:h-[3.75rem] md:h-16 lg:h-[4.688rem] xl:h-[5.375rem] 2xl:h-[6.813rem];
+    }
 }
 .rating-logo{
     @apply inline-block w-8 md:w-10 lg:w-12 xl:w-auto ; 
@@ -50,9 +52,13 @@ header{
 .main-navigation{
     & .nav-menu {
         & > .menu-item{
-            
-            & > a{
-                @apply py-2 xl:py-4 2xl:py-6 px-2 lg:px-3 xl:px-5 2xl:px-7 border-b rounded-none md:border-b-2 xl:border-b-[3px] 2xl:border-b-4 border-transparent hover:border-primary-500 lg:text-sm xl:text-base 2xl:text-lg font-bold text-aeblack-700 hover:text-primary-500;
+            & > a {
+                @apply xl:h-16 xl:inline-flex xl:items-center xl:px-3 border-b rounded-none md:border-b-2 xl:border-b-[3px] 2xl:border-b-4 border-transparent hover:border-primary-500 xl:text-base 2xl:text-lg font-bold text-aeblack-800 hover:text-primary-500;
+                &:hover{
+                    &+button{
+                         @apply text-primary-500;
+                    }
+                }
             }
         }
     }
@@ -65,15 +71,16 @@ header{
                 @apply border-primary-900 text-primary-900;
             }
         }
-    }
-    & .menu-item-has-children{
-        & > a{
-           @apply relative transition-colors inline-flex items-center after:h-4 after:w-4 gap-2 after:inline-flex after:items-center after:justify-center after:bg-center;
+        &.menu-item-has-children{
+            & > a {
+               @apply relative transition-colors inline-flex items-center gap-2 xl:pr-7;
+            }
+            & .submenu-btn{
+                @apply h-4 w-4 -ms-5 inline-flex items-center justify-center relative;
+            }
         }
-        & > a:after{
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 256 256'%3E%3Crect width='256' height='256' fill='none'/%3E%3Cpolyline points='208 96 128 176 48 96' fill='none' stroke='%2392722A' stroke-linecap='round' stroke-linejoin='round' stroke-width='16'/%3E%3C/svg%3E");
-        }
     }
+    
     }
 .has-link-icon{
    & a{
@@ -92,14 +99,14 @@ header{
     }
 }
 
-.sub-menu{
-    @apply hidden top-full inset-x-0 bg-whitely-50 ;
+.submenu{
+    @apply hidden top-full inset-x-0 bg-whitely-50	;
     & .submenu-title{
         @apply px-2 lg:px-3 xl:px-4 2xl:px-6 pt-3 pb-6 capitalize;
     }
     & li{
         & a{
-            @apply px-2 lg:px-3 xl:px-4 2xl:px-6 py-2 inline-block transition-colors hover:text-primary-900 hover:bg-primary-100;
+            @apply px-2 lg:px-3 xl:px-4 2xl:px-6 py-2 inline-block transition-colors text-aeblack-900 hover:text-primary-900 hover:bg-primary-100 ;
         }
     }
 }
@@ -108,7 +115,7 @@ header{
 }
 .menu-item-has-children{
     &:hover{
-       & .sub-menu{
+       & .submenu{
             @apply block;
         }
     }
