--- a/src/components/accordion.css
+++ b/src/components/accordion.css
@@ -4,7 +4,7 @@
     }
     & .accordion-title{
         & button{
-            @apply py-4 md:py-5 xl:py-6 px-3 flex justify-between items-center text-aeblack-900 hover:text-primary-700 font-semibold text-base focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-100;
+            @apply flex justify-between items-center text-aeblack-900 hover:text-primary-700 font-semibold text-base;
             &.aegov-acc-open{
                 @apply text-primary-700;
             }
@@ -13,9 +13,16 @@
             }
         }
     }
-    & .accordion-content{
-        & .accordion-content-body{
-            @apply py-4 md:py-5 xl:py-6 px-3;
+    &:not(.aegov-mobile-accordion){
+        & .accordion-title{
+            & button{
+                @apply py-4 md:py-5 xl:py-6 px-3 flex justify-between items-center text-aeblack-900 hover:text-primary-700 font-semibold text-base focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary-100;
+            }
+        }
+        & .accordion-content{
+            & .accordion-content-body{
+                @apply py-4 md:py-5 xl:py-6 px-3;
+            }
         }
     }
 }
