--- a/src/components/link.css
+++ b/src/components/link.css
@@ -1,9 +1,11 @@
-a.aegov-link {
+.aegov-link {
 	@apply inline-flex gap-2 bg-transparent py-2 px-2 -ml-2 rtl:ml-0 rtl:-mr-2 font-semibold align-middle items-center no-underline hover:underline;
 	@apply focus-visible:ring-offset-4 focus-visible:ring-primary-300;
-
 	& > svg.link-icon {
 		@apply w-5 h-5;
+	}
+	&.link-underline {
+		@apply underline;
 	}
 	&.link-soft {
 		@apply hover:no-underline hover:bg-primary-50;
